src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Knowledge</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>SOP</fullName>
        <active>true</active>
        <label>SOP</label>
    </recordTypes>
</CustomObject>